finished basic quoation

--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -94,6 +94,7 @@ $dir: ltr;
 @import "../layouts/garage-popup";
 @import "../state/checkout/cart";
 @import "../state/checkout/order_summary.scss";
+@import "../state/quotations";
 @import "../layouts/quotation-request";
 @import "../layouts/send-request";
 @import "../layouts/search_result";
