fixed quotation bugs

--- a/scss/state/_quotations.scss
+++ b/scss/state/_quotations.scss
@@ -1,6 +1,9 @@
 .Quotations-container {
     .nav-tabs {
         margin-bottom: 20px;
+        .nav-item {
+            cursor: pointer;
+        }
     }
     li {
         margin-bottom: 10px;
