--- a/scss/layouts/authentication/_forgot-password.scss
+++ b/scss/layouts/authentication/_forgot-password.scss
@@ -3,10 +3,10 @@
     text-align: center;
     background-color: #f6f6f6;
 
-    img{
+    .upload-img{
       margin-top: 74px;
       margin-bottom: 20px;
-      max-width: 145px;
+      width: 145px !important;
       height: 126px;
       background-color: #e0e0e0;
     }
@@ -16,39 +16,52 @@
       display: flex;
       margin-#{$right}: 0px!important;
       margin-bottom: 150px !important;
-      .form-control {
-        text-align: $left;
-        background: inherit;
-        border: none;
-        width: 480px;
-        margin-#{$right}: 30px !important;
-        input {
-          justify-content: center;
-          @include box-shadow;
-          height: 55px;
-          background: $white;
-          text-transform: none;
-          color: black;
-          border-radius: side-values(20px 0px 20px 20px) !important;
-
-        }
-        label {
-          @include font-size(16px);
-          width: 37px;
-          height: 13px;
-          opacity: 0.8;
-          font-family: Roboto;
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: 1.56;
-          letter-spacing: normal;
+      padding-left: 30%;
+      padding-right: 30%;
+      div{
+        @include margin-right(0px !important);
+        padding: 0px;
+      }
+      .RenderField{
+        text-align: left;
+        @include margin-right(0px !important);
+        .form-control {
           text-align: $left;
-          color: $charcoal-grey-two-80;
-          padding-#{$left}: 13px;
+          background: $white;
+          border: none;
+          width: 0px;
+          height: 55px;
+          border-radius: side-values(20px 0px 20px 20px) !important;
+          @include box-shadow;
+          input {
+            justify-content: center;
+            height: 55px;
+            background: $white;
+            text-transform: none;
+            color: black;
+
+          }
+          label {
+            @include font-size(16px);
+            width: 37px;
+            height: 13px;
+            opacity: 0.8;
+            font-family: Roboto;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.56;
+            letter-spacing: normal;
+            text-align: $left;
+            color: $charcoal-grey-two-80;
+            padding-#{$left}: 13px;
+          }
         }
       }
-  }
+      .btn-primary{
+        @include margin-right(0px);
+      }
+    }
     p{
       font-family: Roboto;
       @include font-size(50px);
@@ -81,6 +94,7 @@
      width: 115px;
      height: 55px;
      font-size: 20px;
+     @include margin-left(5px);
      background: $brand-color;
      color: white;
      border-radius: side-values(0px 20px 20px 20px) !important;
@@ -123,7 +137,6 @@
           text-align: left;
         }
       }
-
     }
   }
 }
@@ -167,13 +180,10 @@
         margin-bottom: 30px;;
     }
     .form-group{
-      .form-control {
-        margin-left: 5px;
-        text-align: $left;
-        background: inherit;
-        border: none;
-        width: 98%;
-
+      .RenderField{
+        text-align: left;
+        @include padding-left(20px);
+        @include padding-right(20px !important);
         input {
           @include box-shadow;
           height: 55px;
