--- a/scss/state/checkout/_checkout-order.scss
+++ b/scss/state/checkout/_checkout-order.scss
@@ -1,6 +1,9 @@
 #checkout-order{
   background: none;
   padding-top: 0px;
+  @include small-screen {
+    padding: 0px;
+  }
   .CheckoutConfirmation-container{
     margin-bottom: 30px;
     .delivery-address{
@@ -216,6 +219,9 @@
       line-height: 50px;
       letter-spacing: normal;
       text-align: $left;
+      @include small-screen {
+        font-size: 11px !important;
+      }
       span{
         color: #ed4036;
         margin-top: 10px;
@@ -251,247 +257,5 @@
         }
       }
     }
-  }
-}
-#checkout-order-mobile{
-  background: none;
-  padding-top: 0px;
-  .CheckoutConfirmation-container{
-    margin-bottom: 30px;
-    .delivery-address{
-      padding: 0px;
-      .DeliveryAddress_subheader{
-        h4{
-          padding: 20px;
-          background: $white;
-          border-radius: side-values(20px 0 0 0);
-          margin-bottom: 2px;
-        }
-        .addresses-box_item{
-          background: $white;
-          margin-bottom: 25px;
-          padding: 20px;
-          .addresses-box_item-label{
-            display: flex;
-            p{
-              margin-bottom: 0px;
-              font-family: Roboto;
-              @include font-size(17px);
-              font-style: normal;
-              font-stretch: normal;
-              line-height: 28px;
-              letter-spacing: normal;
-              text-align: $left;
-              font-weight: bold;
-            }
-          }
-          .about-the-person{
-            p{
-              font-family: Roboto;
-              @include font-size(15px);
-              font-weight: normal;
-              font-style: normal;
-              font-stretch: normal;
-              line-height: 1.53;
-              letter-spacing: normal;
-              text-align: $left;
-              margin: 0px;
-            }
-          }
-          .addresses-footer{
-            height: 41px;
-            display: flex;
-            margin-top: 18px;
-            margin-bottom: 18px;
-            .btn-gray{
-              margin-#{$right}: 10px;
-              .icon-edit{
-                @include font-size(18px);
-              }
-              span{
-                @include font-size(13px);
-                @include margin-left(6px);
-              }
-            }
-          }
-          .seperator{
-            width: 100%;
-            height: 2px;
-            background-color: $light-gray;
-          }
-        }
-        .footer-delivery{
-          font-family: Roboto;
-          @include font-size(15px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          text-align: $left;
-          margin-bottom: 0px;
-          margin-top: 10px;
-          color: #37363c;
-        }
-      }
-    }
-    .payment-method{
-      background: none !important;
-      margin-bottom: 30px;
-      padding: 0px;
-     .PaymentMethod_subheader{
-       h4{
-         padding: 20px;
-         background: $white;
-         margin-bottom: 2px;
-       }
-       .payment-box_item{
-         background: $white;
-         padding: 20px;
-         .payment-box_item-label{
-           display: flex;
-           @include margin-left(20px);
-           p{
-             margin-bottom: 0px;
-             font-family: Roboto;
-             @include font-size(17px);
-             font-weight: normal;
-             font-style: normal;
-             font-stretch: normal;
-             line-height: 28px;
-             letter-spacing: normal;
-             text-align: $left;
-             @include margin-left(4px);
-           }
-           img{
-             width: 25px;
-             height: 25px;
-           }
-         }
-         .visa-num{
-           @include margin-left(19px);
-           .end-number{
-             display: flex;
-             opacity: 0.6;
-             font-family: Roboto;
-             @include font-size(13px);
-             font-weight: 500;
-             font-style: normal;
-             font-stretch: normal;
-             line-height: normal;
-             letter-spacing: normal;
-             text-align: $left;
-             color: rgba(55, 54, 60, 0.6);
-             margin-bottom: 10px;
-             span{
-               @include margin-left(6px);
-               color: $black;
-             }
-           }
-           .expires-date{
-             display: flex;
-             opacity: 0.6;
-             margin-bottom: 0px;
-             font-family: Roboto;
-             @include font-size(13px);
-             font-weight: 500;
-             font-style: normal;
-             font-stretch: normal;
-             line-height: normal;
-             letter-spacing: normal;
-             text-align: $left;
-             color: rgba(55, 54, 60, 0.6);
-             span{
-               @include margin-left(6px);
-               color: $black;
-             }
-           }
-         }
-         .payment-footer{
-           height: 41px;
-           display: flex;
-           margin-top: 18px;
-           .btn-gray{
-             @include margin-left(20px);
-             margin-#{$right}: 10px;
-             .icon-edit{
-               @include font-size(18px);
-             }
-             span{
-               @include font-size(13px);
-               @include margin-left(6px);
-             }
-           }
-         }
-       }
-     }
-    }
-  }
-
-  .CheckoutConfirmation_items{
-    background: none;
-    border: none;
-    .title{
-      background: white;
-      padding: 20px;
-      margin-bottom: 2px;
-      font-family: Roboto;
-      @include font-size(25px);
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      text-align: left;
-      color: #37363c;
-    }
-    .item-list{
-      border: none;
-      li{
-        background: $white;
-        margin-bottom: 2px;
-        padding: 20px;
-        .quantity{
-          .form-control{
-            @include margin-left(3px);
-          }
-        }
-      }
-    }
-  }
-  .footer-delivery{
-    display: flex;
-    padding: 20px;
-    @include margin-left(0px);
-    @include margin-right(0px);
-    p{
-      font-family: Roboto;
-      @include font-size(13px);
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 50px;
-      letter-spacing: normal;
-      text-align: $left;
-      span{
-        color: #ed4036;
-        margin-top: 10px;
-      }
-    }
-    .btn-primary{
-      text-align: right;
-      text-transform: capitalize;
-      i{
-        @include margin-left(10px);
-      }
-    }
-  }
-  .wahtsapp{
-    margin-bottom: 100px;
-  }
-}
-.Checkout-container-mobile{
-  .Checkout-Order_summary{
-    height: 29em;
   }
 }
