--- a/scss/state/checkout/_checkout-shipping.scss
+++ b/scss/state/checkout/_checkout-shipping.scss
@@ -1,6 +1,12 @@
 .checkout-container-shipping{
   background: $light-gray;
   .Checkout-container{
+    @include large-medium-screens {
+      display: flex;
+    }
+    @include small-screen {
+      display: block;
+    }
     .whatsapp{
       .bg-whatsapp{
         text-transform: none;
@@ -16,15 +22,28 @@
     .Address-container{
       .addresses-header{
         display: flex;
-        margin-right: 30px;
         margin-bottom: 3px;
         background: white;
         border-radius: side-values(20px 0 0 0) !important;
         padding: 10px;
+        @include large-medium-screens {
+          @include margin-right(30px);
+        }
+        @include small-screen {
+          @include margin-right(0px);
+          display: block;
+          @include padding-left(20px);
+          @include padding-right(20px);
+        }
         .btn-primary{
           background: $light-gray;
           text-transform: capitalize;
           color: $black;
+          @include small-screen {
+            width: 100%;
+            margin-top: 5px;
+            margin-bottom: 5px;
+          }
           span{
             @include margin-left(5px);
           }
@@ -40,13 +59,21 @@
           text-align: $left;
           margin-top: 10px;
           @include margin-left(10px);
+          @include small-screen {
+            @include margin-left(0px);
+          }
         }
       }
       #addresses-container{
         margin-top: 3px;
       }
       form{
-        @include margin-right(29px);
+        @include large-medium-screens {
+          @include margin-right(30px);
+        }
+        @include small-screen {
+          @include margin-right(0px);
+        }
         .no-gutters{
           background: $white;
           padding: 20px;
@@ -212,8 +239,14 @@
             height: auto;
             background-color: $light-gray;
             border-radius: side-values(0 0 0 20px) !important;
-            @include box-shadow;
-            width: 18%;
+            @include large-medium-screens {
+              width: 18%;
+              @include box-shadow;
+            }
+            @include small-screen {
+              width: 100%;
+              margin-top: 20px;
+            }
           }
           .btn-primary{
             float: right;
@@ -221,11 +254,17 @@
             width: 80%;
             border-radius: side-values(0 20px 20px 0) !important;
             height: auto;
-            @include box-shadow;
             text-align: $right;
             text-transform: none;
             i{
               @include margin-left(10px);
+            }
+            @include large-medium-screens {
+              width: 80%;
+              @include box-shadow;
+            }
+            @include small-screen {
+              width: 100%;
             }
           }
         }
@@ -363,240 +402,8 @@
     }
   }
 }
-
-.Checkout-container-mobile{
-  .Checkout-Order_summary{
-    .order-summery{
-      margin-bottom: 20px !important;
-    }
-    .whatsapp{
-      .bg-whatsapp{
-        text-transform: none;
-        color: black;
-        border-radius: side-values(20px 20px 0px 20px) !important;
-        span{
-          font-size: 9px;
-          width: fit-content !important;
-          text-align: $left;
-        }
-      }
-    }
-  }
-  .Address-container{
-    .addresses-header{
-      margin-bottom: 3px;
-      background: white;
-      border-radius: side-values(20px 0 0 0) !important;
-      padding: 10px;
-      p{
-        font-family: Roboto;
-        @include font-size(17px);
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        text-align: $left;
-        margin-top: 10px;
-        @include margin-left(10px);
-      }
-    }
-    #addresses-container{
-      margin-top: 3px;
-    }
+.Checkout-Order_summary{
+  @include small-screen{
     padding: 0px;
-    form{
-      .no-gutters{
-        background: $white;
-        padding: 20px;
-      }
-      .RenderField{
-        label{
-          top: 6px;
-        }
-      }
-      .title-address{
-        .form-control{
-          border-radius: side-values(20px 0 0 20px) !important;
-          background: $light-gray;
-        }
-        .RenderField{
-          border-radius: side-values(20px 0 0 20px) !important;
-          input{
-            margin-bottom: 0px;
-            border-bottom: none;
-          }
-        }
-      }
-      .google-map{
-        display: flex;
-        margin-top: 30px;
-        margin-bottom: 10px;
-        a{
-          display: flex;
-        }
-        img{
-          height: 28px;
-        }
-        p{
-          font-family: Roboto;
-          @include font-size(15px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: 43px;
-          letter-spacing: normal;
-          text-align: $left;
-          margin-bottom: 0px;
-          color: $brand-color;
-        }
-      }
-      .address-title{
-        margin-bottom: 20px;
-        .form-control{
-          border-radius: side-values(20px 0 20px 20px) !important;
-          background: $light-gray;
-        }
-        .RenderField{
-          border-radius: side-values(20px 0 20px 20px) !important;
-          input{
-            margin-bottom: 0px;
-            border-bottom: none;
-          }
-        }
-      }
-      .select-input{
-        .css-10nd86i{
-          width: 100%;
-          padding: 10px;
-          background: $light-gray;
-        }
-      }
-      .div-rounded-first{
-        .RenderField{
-          border: none;
-          input{
-            border-radius: side-values(20px 0 0 20px) !important;
-            background: $light-gray;
-            padding: 12px;
-          }
-        }
-      }
-      .div-rounded-last{
-        .select-input{
-          .css-10nd86i{
-            border-radius: side-values(20px 0 20px 20px) !important;
-          }
-        }
-      }
-      .div-rounded{
-        @include padding-left(5px);
-        @include padding-right(5px);
-        .select-input{
-          .css-10nd86i{
-            border-radius: side-values(0 0 20px 0) !important;
-          }
-        }
-      }
-      .phone-info{
-        margin-top: 25px;
-        margin-bottom: 20px;
-        .RenderField{
-          width: 100%;
-          label{
-            display: none;
-          }
-        }
-        .phone-number{
-          display: flex;
-          .first{
-            margin-#{$right}: 5px;
-            .form-control{
-              border-radius: side-values(20px 0 0 20px) !important;
-              width: 70px;
-              text-align: center;
-            }
-          }
-          .form-control {
-            border-radius: 0 0 0 0 !important;
-            border: none;
-            background: $light-gray;
-            height: 55px;
-            width: 110%;
-            label,
-            sub,
-            br {
-              display: none;
-            }
-          }
-        }
-        .zipCode{
-          margin-top: 20px;
-          .form-control {
-            border-radius: side-values(20px 0 20px 20px) !important;
-            border: none;
-            background: $light-gray;
-            height: 55px;
-            label,
-            sub,
-            br {
-              display: none;
-            }
-          }
-        }
-      }
-      .shipping-style{
-        margin-bottom: 20px;
-        .form-control{
-          padding-bottom: 20px;
-          border-radius: side-values(20px 0 20px 20px) !important;
-          background: $light-gray;
-        }
-        .RenderField{
-          @include padding-left(10px);
-          border-radius: side-values(20px 0 20px 20px) !important;
-          margin-left: -13px;
-          input{
-            margin-bottom: 0px;
-            border-bottom: none;
-          }
-        }
-      }
-      .checkmark{
-        border-radius: 9px;
-      }
-      .container{
-        margin-top: 10px;
-        margin-bottom: 0px;
-      }
-      .footer{
-        margin-top: 32px;
-        margin-bottom: 50px;
-        .btn-light{
-          height: auto;
-          background-color: $light-gray;
-          border-radius: side-values(0 0 0 20px) !important;
-          @include box-shadow;
-          width: 18%;
-        }
-      }
-
-      .btn-secondary{
-        @include margin-left(5px);
-        background: $brand-color;
-        border-radius: side-values(0 20px 20px 20px) !important;
-        height: auto;
-        @include box-shadow;
-        text-align: $right;
-        text-transform: none;
-        width: 100%;
-        color: $white;
-        margin-top: 21px;
-        margin-bottom: 71px;
-        i{
-          @include margin-left(10px);
-        }
-      }
-    }
   }
 }
