Make sure to select the data before moving to the next page and fixed some things in style

--- a/scss/state/checkout/_checkout-confirmation-order.scss
+++ b/scss/state/checkout/_checkout-confirmation-order.scss
@@ -306,5 +306,14 @@
        }
      }
     }
+    .div-price-quantity{
+      display: flex;
+      .cart-quantity{
+        h5{
+          line-height: 70px;
+          @include margin-left(14px);
+        }
+      }
+    }
   }
 }
