--- a/scss/state/checkout/_order_summary.scss
+++ b/scss/state/checkout/_order_summary.scss
@@ -34,8 +34,8 @@
       > span {
         font-family: Roboto;
         @include font-size(11px);
-        color: $charcoal-grey;
-        padding-#{$left}: 5px;
+        color: $black;
+        padding-#{$left}: 3px;
       }
     }
 
