--- a/scss/state/checkout/_checkout-order.scss
+++ b/scss/state/checkout/_checkout-order.scss
@@ -191,6 +191,10 @@
       text-align: left;
       color: #37363c;
     }
+    .div-title{
+      @include margin-left(15px);
+      @include margin-right(15px);
+    }
     .item-list{
       border: none;
       li{
