work on the checkout payment(used the real data)

--- a/scss/state/checkout/_checkout-payment.scss
+++ b/scss/state/checkout/_checkout-payment.scss
@@ -372,6 +372,9 @@
         letter-spacing: normal;
         text-align: $left;
       }
+      .product-options{
+        margin-bottom: 30px;
+      }
     }
     #cash-delivery{
       background: $white;
