btn was not fully clickable

--- a/scss/state/checkout/_checkout-order.scss
+++ b/scss/state/checkout/_checkout-order.scss
@@ -233,6 +233,7 @@
     }
     .btn-primary{
       display: flex !important;
+      z-index: 10;
       div{
         margin-top: 12px;
         @include margin-right(100px);
