--- a/scss/layouts/vehicles/_vehicles.scss
+++ b/scss/layouts/vehicles/_vehicles.scss
@@ -1,6 +1,7 @@
 #vehicles {
   @include small-screen {
     padding: side-values(36px 30px 0 16px);
+    margin-bottom: 202px;
     background: $light-gray;
   }
   .group-shadow-input {
@@ -102,9 +103,6 @@
     text-transform: capitalize;
     text-align: $right;
 
-    @include small-screen {
-      margin-bottom: 202px
-    }
   }
   .select-input {
     label,
