Hide data that is not completed

--- a/scss/layouts/_product.scss
+++ b/scss/layouts/_product.scss
@@ -380,6 +380,12 @@
   form {
     margin-bottom: 99px;
   }
+  .q-hide-small{
+    display: none;
+  }
+  .q-display-small{
+    display: none;
+  }
 }
 
 #AddProduct {
