--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -566,3 +566,9 @@
  .border {
   border: 0 !important;
 }
+.isDisabled {
+  color: currentColor;
+  cursor: not-allowed;
+  opacity: 0.5;
+  text-decoration: none;
+}
