--- a/scss/layouts/category/_motor-oil.scss
+++ b/scss/layouts/category/_motor-oil.scss
@@ -1,181 +1,78 @@
-.oil-image{
-    @include small-screen{
-      background: url(/img/oil-xs.jpg);
-      height: 250px;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center top;
+#motor-oil{
+  background: $light-gray;
+  .main-cat{
+    margin-top: 0px;
+  }
+  .oil-img{
+    padding-top: 40px;
+    background: white;
+    margin-bottom: 50px;
+  }
+  @media (min-width: 992px) {
+    .main-cat a:first-child figure {
+      border-radius: 20px 0 0 20px;
     }
   }
-
-#oil-best-sellers{
-    @include large-medium-screens{
-        padding-top: 55px;
+  header{
+    padding-bottom: 20px;
+    h1{
+      font-family: Roboto;
+      @include font-size(25px);
+      font-weight: 500;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: $left;
+      color: #37363c;
     }
-    @include small-screen{
-        margin-top: -90px;
+  }
+  @media (min-width: 1300.98px) {
+     header {
+         @include margin-left(130px);
     }
-    .slick-initialized {
-        margin-top: 56px;
+  }
+  @media (max-width: 1300.98px) {
+     header {
+         @include margin-left(20px);
     }
-}
-
-#oil-top-brands{
-    .brand-container{
-        padding-bottom: 17px;
-    }
-    > .row {
-        margin-top: 56px;
-    }
-}
-
-#oil-ads{
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-
-#oil-grades{
-
-}
-
-
-#motor-oil{
-    @include large-medium-screens {
-        background: url(/img/oil-lg.jpg);
-        min-height: 350px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center top;
+  }
+  .popular-oil{
+    padding-bottom: 40px;
+    @media (min-width: 992px) {
+      .main-cat a:first-child img {
+        border-radius: 20px 0 0 20px;
       }
-
-      color: $white;
-      text-align: center;
-
-      .oil-content{
-        position: relative;
-        @include large-medium-screens{
-          top: 155px;
-          bottom: 261px;
-        }
-
-        .oil-title{
-            height: 34px;
-        }
-
-        @include small-screen{
-            top: -160px;
-            bottom: -160px;
-          }
-
-        h1 {
-            @include large-medium-screens{
-              @include font-size($title-font-size);
-              margin-bottom: 40px;
-            }
-
-          }
-
-        .subtitle-container{
-            @include large-medium-screens{
-                padding-top: 46px;
-                padding-bottom: 14px;
-                h2 {
-                    text-transform: uppercase;
-                    float: left;
-                    @include font-size(20px);
-                    margin-bottom:0;
-                }
-                p{
-                    padding-left: 10px;
-                    padding-top : 4px;
-                    float:left;
-                    vertical-align: bottom;
-                    margin-bottom: 0;
-                }
-            }
-
-            @include small-screen{
-                background-color: #fff;
-                @include boarder-left-radius(20px,0);
-                margin-bottom: 5px;
-                margin-top: 48px;
-                height: 77px;
-
-                h2 {
-                    padding-top: 29px;
-                    padding-left: 19px;
-                    text-transform: uppercase;
-                    float: left;
-                    @include font-size(25px);
-                    margin-bottom:0;
-                    color: #222;
-                }
-                p{
-                    display: none;
-                }
-            }
-            
-        }
-        
-
-        .oil-dropdown{
-            .size-selection-container{
-                @include small-screen{
-                    @include box-shadow;
-                    @include boarder-left-radius(0, 20px);
-                    @include boarder-right-radius(0, 20px);
-                    padding-bottom: 10px;
-                    margin-bottom: 21px;
-                }
-            }
-
-            .h-seperator {
-                position: relative;
-                left: 10px;
-                height: 1px;
-                }
-            
-            label{
-                  display: none;
-            }
-            br{
-                  display: none;
-            }
-            .viscosity-field-container{
-                background-color:#fff;
-                @include boarder-left-radius;
-                max-height: 51px;
-
-                .viscosity-field{
-                    border: none;
-                    width: 100%;
-                }
-            }
-            
-            .brand-field-container{
-                background-color:#fff;
-                #{$left}: 2px;
-                max-height: 51px;
-                @include boarder-right-radius(0, 20px);
-                .brand-field{
-                    width: 100%;
-                    border:none;
-                }
-            }
-            
-            .btn-container{
-                max-height: 51px;
-                @include boarder-right-radius(0, 20px);
-                .btn-primary{
-                    width: 100%;
-                }
-                @include small-screen{
-                    padding-left: 0;
-                    padding-right: 0;
-                }    
-            }
-
-        }
+    }
+    @media (min-width: 992px) {
+      .main-cat a:last-child img {
+        border-radius: 0 0 20px 0;
       }
+    }
+    img{
+      width: 160px;
+      height: 79px;
+      margin-bottom: 20px;
+      @include margin-right(30px);
+    }
+  }
+  .poster{
+    text-align: center;
+    padding-bottom: 70px;
+    img{
+      width: 70%;
+      height: 100px;
+    }
+  }
+  .best-seller{
+    header{
+      padding-bottom: 0px;
+      h1{
+        margin: 0px;
+      }
+    }
+    .products-sec{
+      margin-top: 0px;
+    }
+  }
 }
